--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "optimize:hand": "gltf-pipeline -i public/models/Hand-model.glb -o public/models/Hand-model-draco.glb -d",
+    "optimize:polish": "gltf-pipeline -i public/models/Polish-model.glb -o public/models/Polish-model-draco.glb -d"
   },
   "dependencies": {
     "@react-three/drei": "^9.121.4",
@@ -36,6 +38,7 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "15.1.6",
+    "gltf-pipeline": "^4.1.0",
     "parent-module": "^3.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
