--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "gsap": "^3.12.5",
     "lenis": "^1.1.18",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
+    "next": "^16.2.0-canary.22",
     "next-sanity": "^11.6.12",
     "react": "19.0.0",
     "react-dom": "19.0.0",
