--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-sanity": "^11.6.12",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-google-reviews": "^1.8.0",
     "sanity": "^4.22.0",
     "styled-components": "^6.3.8",
     "tailwind-merge": "^2.6.0",
