--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "three": "^0.172.0"
   },
   "browserslist": [
-    "defaults",
-    "not IE 11"
+    "last 2 Chrome versions",
+    "last 2 Firefox versions",
+    "last 2 Safari versions",
+    "last 2 Edge versions"
   ],
   "devDependencies": {
     "@types/node": "^20",
